--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "private": false,
-  "name": "dir-tree",
+  "name": "dir-tree-js",
   "version": "0.0.1",
-  "bin": "./bin/index.js",
+  "bin": {
+    "dir-tree": "./bin/index.js"
+  },
   "main": "index.js",
   "repository": "git@github.com:itcat99/dir-tree.git",
   "author": "fremango <boping2010@gmail.com>",
